Added configuration to CMakeLists.txt to allow for static/shared builds and cross platform support. Renamed from libdis to dis to fix linux naming convention.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,31 @@
 cmake_minimum_required(VERSION 3.8)
 
-project(libdis)
+project(dis)
 
-file(GLOB LIB_DIS_SOURCE
-    "include/*"
-    "src/*"
+option(BUILD_SHARED_LIBS "Build shared libraries" ON)
+
+add_library(dis
+    "include/dis.h"
+    "src/dis.c"
 )
 
-add_library(libdis SHARED ${LIB_DIS_SOURCE})
+set_target_properties(dis PROPERTIES
+    VERSION 0.1
+    C_EXTENSIONS OFF
+    C_STANDARD 11
+    POSITION_INDEPENDENT_CODE ON
+)
 
-target_include_directories(libdis PUBLIC
+if (BUILD_SHARED_LIBS)
+    set_property(TARGET dis PROPERTY DEFINE_SYMBOL DIS_BUILD_SHARED)
+
+    if (UNIX)
+        # Hide symbols not explicitly tagged for export from the shared library
+        target_compile_options(dis PRIVATE "-fvisibility=hidden")
+    endif()
+endif()
+
+target_include_directories(dis PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
